--- a/css/style2.css
+++ b/css/style2.css
@@ -99,7 +99,7 @@ main section {
 
 footer figure {
     color: darkblue;
-    background: #de4444;
+    background: #a26b83;
     width: 14%;
     line-height: 3rem;
     padding: 2rem;
