--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,157 @@
-#map {
-    position: absolute;
-    top: 0;
-    bottom: 50%;
-    left: 0;
-    right: 0;
+/* utilities */
+.button {
+    display: block;
+    padding: 0.5rem 1rem;
+    border-radius: 2px;
+    text-decoration: none;
+    text-align: center;
 }
 
-    /*leaf dots style*/
-.blueIcon{
+.nav-button {
+    background-color: #c8e3e3;
+    color: #383838;
+}
+
+.nav-button:hover {
+    color: #383838;
+    background: #a26b83;
+    border: 1px solid #383838;
+}
+
+.nav-button:focus {
+    color: #383838;
+    background-color: #85a447;
+    border: 1px solid #383838;
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.space-evenly {
+    justify-content: space-evenly;
+}
+
+.responsive-img {
+    width: 100%;
+    height: auto;
+}
+
+.hide {
+    display: none;
+}
+
+
+/* rem = relative to the root element */
+/* app specific */
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: "Baskerville Old Face", serif;
+    background-color: lightsteelblue;
+}
+
+
+.header {
+    background-color: slategray;
+    color: #383838;
+    vertical-align: middle;
+    padding: 1rem;
+}
+
+.header h1 {
+    margin: 0;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#map {
+    margin: 2rem;
+    border: 1px solid #383838;
+}
+
+#about-text, #game-text {
+    border: 1px solid #383838;
+    background-color: #bfd5ec;
+    margin: 2rem;
+    padding: 2rem;
+    text-align: center;
+}
+
+#about-text {
+    height: 60vh;
+}
+
+
+.footer {
+    padding: 1.2rem 2rem;
+    background-color: slategray;
+    color: #383838;
+}
+
+.footer table {
+    width: 100%;
+    text-align: center;
+    border: 1px solid #383838;
+}
+
+.footer table td {
+    border: 1px solid #4b4b4b;
+    padding: 0.5rem;
+    line-height: 2rem;
+}
+
+.goal {
+    background: #a26b83;
+}
+
+.goal-reached {
+    background-color: #85a447;
+}
+
+#username {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 0;
+}
+
+#user-form {
+    display: flex;
+    width: 50%;
+    margin: 4rem auto;
+    flex-direction: column;
+}
+
+#user-form input {
+    padding: 0.5rem;
+
+}
+
+#submit:hover {
+    background-color: #a26b83;
+    border: 1px solid #383838;
+}
+
+#submit:focus {
+    background-color: #85a447;
+    border: 1px solid #383838;
+}
+
+.blueIcon {
     background-color: deepskyblue;
     border-radius: 50%;
     border: 5px solid rgba(255, 255, 255, 0.5);
 }
 
-.greenIcon{
+.greenIcon {
     background-color: greenyellow;
     border-radius: 50%;
     border: 5px solid rgba(255, 255, 255, 0.5);
-}
-
-.goals{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
 }
