--- a/css/start_animation.css
+++ b/css/start_animation.css
@@ -1,7 +1,8 @@
 
-body {
+html, body {
     background-image: url(clouda.jpg);
     background-size: cover;
+    font-family: "Baskerville Old Face", serif;
 }
 
 #animation-container {
