--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,15 @@ ul {
     padding: 0;
 }
 
-#map {
+main {
+    height: 20rem;
     margin: 2rem;
+    padding: 1rem;
+}
+#map {
     border: 1px solid #383838;
+    padding: 2rem;
+    height: 80%;
 }
 
 #about-text, #game-text {
@@ -92,6 +98,7 @@ ul {
     padding: 1.2rem 2rem;
     background-color: slategray;
     color: #383838;
+    bottom: 0;
 }
 
 .footer table {
@@ -144,6 +151,9 @@ ul {
     border: 1px solid #383838;
 }
 
+
+/* map things */
+
 .blueIcon {
     background-color: deepskyblue;
     border-radius: 50%;
@@ -154,4 +164,34 @@ ul {
     background-color: greenyellow;
     border-radius: 50%;
     border: 5px solid rgba(255, 255, 255, 0.5);
+}
+
+.red-icon {
+    background-color: red;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
+}
+
+
+.qForm_elements {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    border: 1px solid #ced4da;
+}
+
+
+.flag {
+    width: 100%;
+    height: 100%;
+    box-shadow: 2px 2px 2px #888;
+    border: 0.5px solid gray;
+}
+
+
+.formConteiner {
+    background-color: whitesmoke;
+    padding: 0;
 }
